// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverflowMenuItem Below breakpoint and not isPersistent should not show 1`] = `
<Component>
  <div
    className="pf-c-overflow-menu__item"
  >
     
     
  </div>
</Component>
`;

exports[`OverflowMenuItem isPersistent and below breakpoint should still show 1`] = `
<Component
  isPersistent={true}
>
  <div
    className="pf-c-overflow-menu__item"
  >
     
     
  </div>
</Component>
`;
